[gd_scene load_steps=23 format=2]

[ext_resource path="res://res/menu-bg.png" type="Texture" id=1]
[ext_resource path="res://res/barcade-brawl-font/BarcadeBrawlRegular-plYD.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://MainMenu2.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=22]
font_path = "res://res/barcade-brawl-font/BarcadeBrawlRegular-plYD.ttf"

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = SubResource( 22 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=13]

[node name="MainMenu2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -1.0
margin_right = 1023.0
margin_bottom = 600.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 6.0
margin_top = 91.0
margin_right = 449.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 1 )
text = "Camera "
align = 1

[node name="Label2" type="Label" parent="."]
margin_left = 686.0
margin_top = 214.0
margin_right = 824.0
margin_bottom = 254.0
custom_fonts/font = SubResource( 2 )
text = "Man"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -354.0
margin_top = -190.0
margin_right = 38.0
margin_bottom = -20.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 392.0
margin_bottom = 170.0
custom_constants/separation = 30

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 392.0
margin_bottom = 2.0
mouse_filter = 2
custom_colors/font_color_focus = Color( 0.913725, 0.882353, 0.721569, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 10 )
text = "Start"
align = 0

[node name="Instructions" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 392.0
margin_bottom = 34.0
mouse_filter = 2
custom_colors/font_color_focus = Color( 0.913725, 0.882353, 0.721569, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 15 )
custom_styles/normal = SubResource( 11 )
text = "Instructions"
align = 0

[node name="Storyline" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 392.0
margin_bottom = 66.0
mouse_filter = 2
custom_colors/font_color_focus = Color( 0.913725, 0.882353, 0.721569, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/pressed = SubResource( 20 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = SubResource( 12 )
text = "Storyline"
align = 0

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 392.0
margin_bottom = 98.0
mouse_filter = 2
custom_colors/font_color_focus = Color( 0.913725, 0.882353, 0.721569, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 17 )
custom_styles/normal = SubResource( 13 )
text = "Exit"
align = 0

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Storyline" to="." method="_on_Storyline_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
